--- a/index.html
+++ b/index.html
@@ -19,13 +19,10 @@
         <div class="marginMenu">
             <div class="banner">
                 <img src="assets/freepik-Denamorado.jpg" class = "backgroundBanner">
+                <div class="squareBanner"></div>
                 <img src="assets/freepik-BiZkettE1.png" alt="Black Friday" class="blackFBanner">
-            </div>  
-            <div class = 'subscribeBar'>
-                <form>
-                  <span>NOME:</span><input type="text"><span>E-MAIL:</span><input type="text">
-                </form>
             </div>
+            
         </div>
     </body>
     <script src="js/script.js"></script>
