--- a/index.html
+++ b/index.html
@@ -19,8 +19,19 @@
         <div class="marginMenu">
             <div class="banner">
                 <img src="assets/freepik-Denamorado.jpg" class = "backgroundBanner">
-                <div class="squareBanner"></div>
                 <img src="assets/freepik-BiZkettE1.png" alt="Black Friday" class="blackFBanner">
+                <div class="squareBanner">
+                    <form class='formSubscribe'>
+                        <span class="subscribeText">Subscribe in out newsletter to receive all new dicounts!</span><br><br><br>
+                        <label for='fname'>FIRST NAME:</label><br><br>
+                        <input type="text" id='fname' name='fname'><br><br><br>
+                        <label for="emailForm">E-MAIL:</label><br><br>
+                        <input type="email" id="emailForm" name='emailForm'><br><br><br>
+                        <input type="checkbox" id="checkboxForm">
+                        <label for="checkboxForm" id='readAndAccept'>I have read and I accept the terms and conditions.</label><br><br>
+                        <input type="submit" value="submit">                                                
+                    </form>
+                </div>
             </div>
             
         </div>
