--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 </div>
             </div>            
         </div>
-        <footer>
-            <p>Desenvolvido por Larissa Fernandes</p>
+        <footer>   
+            <br><p>Desenvolvido por Larissa Fernandes</p>         
             <a href="https://github.com/Larissa-Fernandes" target="_blank"><img src="assets/iconsplace-github.png" id="icons"></a>
-            <a href="https://linkedin.com/in/Larissa-Fernandes-" target="_blank"><img src="assets/iconsplace-linkedin.png" id="icons"></a>
+            <a href="https://linkedin.com/in/Larissa-Fernandes-" target="_blank"><img src="assets/iconsplace-linkedin.png" id="icons"></a>         
         </footer>
     </body>
     <script src="js/script.js"></script>
